emoji_window/emoji_window.h



// Tab 鍒囨崲鍥炶皟鍑芥暟绫诲瀷 (stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *TAB_CALLBACK)(HWND hTabControl, int selectedIndex);


// 绐楀彛澶у皬鏀瑰彉鍥炶皟鍑芥暟绫诲瀷 (stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *WindowResizeCallback)(HWND hwnd, int width, int height);


// 鑷粯绐楀彛鍏抽棴鍥炶皟鍑芥暟绫诲瀷 (stdcall 璋冪敤绾﹀畾)
// hwnd: 琚叧闂殑绐楀彛鍙ユ焺锛堟鏃?HWND 宸插け鏁堬紝浠呯敤浜庤瘑鍒槸鍝釜绐楀彛锛?
typedef void (__stdcall *WindowCloseCallback)(HWND hwnd);

    __declspec(dllexport) HWND __stdcall create_window_bytes_ex(const unsigned char* title_bytes, int title_len, int x, int y, int width, int height, UINT32 titlebar_color, UINT32 client_bg_color);

    __declspec(dllexport) void __stdcall set_window_titlebar_color(HWND hwnd, UINT32 color);

    __declspec(dllexport) void __stdcall SetWindowBackgroundColor(HWND hwnd, UINT32 color);


    __declspec(dllexport) int __stdcall create_emoji_button_bytes(
        HWND parent,
        const unsigned char* emoji_bytes,
        int emoji_len,
        const unsigned char* text_bytes,
        int text_len,
        int x, int y, int width, int height,
        UINT32 bg_color
    );

    
    // 璁剧疆鎸夐挳浣嶇疆鍜屽ぇ灏?
    __declspec(dllexport) void __stdcall SetButtonBounds(int button_id, int x, int y, int width, int height);

    
    // 璁剧疆鎸夐挳鑳屾櫙鑹?(ARGB鏍煎紡)
    __declspec(dllexport) void __stdcall SetButtonBackgroundColor(int button_id, UINT32 color);

    __declspec(dllexport) void __stdcall SetButtonTextColor(int button_id, UINT32 color);

    __declspec(dllexport) void __stdcall SetButtonBorderColor(int button_id, UINT32 color);

    __declspec(dllexport) void __stdcall SetButtonHoverColors(int button_id, UINT32 bg_color, UINT32 border_color, UINT32 text_color);

    
    // 鏄剧ず/闅愯棌鎸夐挳
    __declspec(dllexport) void __stdcall ShowButton(int button_id, BOOL visible);
    __declspec(dllexport) int __stdcall SetTitleBarTextColor(HWND hwnd, UINT32 color);


    __declspec(dllexport) void __stdcall set_message_loop_main_window(HWND hwnd);

    __declspec(dllexport) int __stdcall run_message_loop();

    __declspec(dllexport) void __stdcall destroy_window(HWND hwnd);

    // 浠庡瓧鑺傞泦璁剧疆绐楀彛鍥炬爣锛堟槗璇█鍙彃鍏ュ浘鐗囪祫婧愬悗浼犲叆 鍙栧彉閲忔暟鎹湴鍧€(瀛楄妭闆? 鍜?鍙栧瓧鑺傞泦闀垮害(瀛楄妭闆?锛?
    __declspec(dllexport) void __stdcall set_window_icon_bytes(HWND hwnd, const unsigned char* icon_data, int data_len);


    // ========== TabControl 鍔熻兘 ==========

    // 鍒涘缓 TabControl
    __declspec(dllexport) HWND __stdcall CreateTabControl(
        HWND hParent,
        int x,
        int y,
        int width,
        int height
    );


    // 娣诲姞 Tab 椤?
    __declspec(dllexport) int __stdcall AddTabItem(
        HWND hTabControl,
        const unsigned char* title_bytes,
        int title_len,
        HWND hContentWindow  // 鍙€夛紝鑻ヤ负 NULL 鍒欒嚜鍔ㄥ垱寤?
    );


    // 璁剧疆 Tab 鍒囨崲鍥炶皟
    __declspec(dllexport) void __stdcall SetTabCallback(
        HWND hTabControl,
        TAB_CALLBACK pCallback
    );


    __declspec(dllexport) BOOL __stdcall SelectTabImmediate(
        HWND hTabControl,
        int index
    );


    // 鑾峰彇 Tab 鏁伴噺
    __declspec(dllexport) int __stdcall GetTabCount(
        HWND hTabControl
    );


    // 鑾峰彇鎸囧畾 Tab 鐨勫唴瀹圭獥鍙ｅ彞鏌?
    __declspec(dllexport) HWND __stdcall GetTabContentWindow(
        HWND hTabControl,
        int index
    );


    __declspec(dllexport) BOOL __stdcall RedrawTabControl(
        HWND hTabControl
    );


    // 璁剧疆 TabControl 鐨勪綅缃拰澶у皬
    __declspec(dllexport) int __stdcall SetTabControlBounds(
        HWND hTabControl,
        int x,
        int y,
        int width,
        int height
    );


    // ========== TabControl 澶栬鍑芥暟 ==========

    // 璁剧疆鏍囩椤靛浐瀹氬昂瀵革紙瀹藉害鍜岄珮搴︼級
    __declspec(dllexport) int __stdcall SetTabItemSize(
        HWND hTab,
        int width,
        int height
    );


    // 璁剧疆鏍囩椤靛瓧浣擄紙fontName 涓?UTF-8 缂栫爜锛?
    __declspec(dllexport) int __stdcall SetTabFont(
        HWND hTab,
        const unsigned char* fontName,
        int fontNameLen,
        float fontSize
    );


    // 璁剧疆鏍囩椤甸鑹诧紙閫変腑/鏈€変腑鐨勮儗鏅壊鍜屾枃瀛楄壊锛孉RGB 鏍煎紡锛?
    __declspec(dllexport) int __stdcall SetTabColors(
        HWND hTab,
        UINT32 selectedBg,
        UINT32 unselectedBg,
        UINT32 selectedText,
        UINT32 unselectedText
    );


    // 璁剧疆閫変腑鏍囩椤靛簳閮ㄦ寚绀烘潯棰滆壊锛圓RGB 鏍煎紡锛?
    __declspec(dllexport) int __stdcall SetTabIndicatorColor(
        HWND hTab,
        UINT32 color
    );


    // 璁剧疆鏍囩椤靛唴杈硅窛锛堟按骞冲拰鍨傜洿锛?
    __declspec(dllexport) int __stdcall SetTabPadding(
        HWND hTab,
        int horizontal,
        int vertical
    );


    __declspec(dllexport) int __stdcall SetTabHeaderStyle(
        HWND hTab,
        int style
    );


    // ========== TabControl 浜や簰澧炲己鍑芥暟 ==========

    // 璁剧疆鏍囩椤垫槸鍚︽樉绀哄叧闂寜閽紙closable: 1=鏄剧ず, 0=闅愯棌锛?
    __declspec(dllexport) int __stdcall SetTabClosable(
        HWND hTab,
        int closable
    );


    // ========== 甯冨眬涓庝綅缃嚱鏁?==========

    // 璁剧疆鏍囩鏍忎綅缃紙position: 0=涓? 1=涓? 2=宸? 3=鍙筹級
    __declspec(dllexport) int __stdcall SetTabPosition(
        HWND hTab,
        int position
    );


    // 璁剧疆鏍囩瀵归綈鏂瑰紡锛坅lign: 0=宸﹀榻? 1=灞呬腑, 2=鍙冲榻愶級
    __declspec(dllexport) int __stdcall SetTabAlignment(
        HWND hTab,
        int align
    );


    // 璁剧疆鏍囩鏍忔槸鍚﹀彲婊氬姩锛坰crollable: 1=鍙粴鍔? 0=涓嶅彲婊氬姩/澶氳锛?
    __declspec(dllexport) int __stdcall SetTabScrollable(
        HWND hTab,
        int scrollable
    );


    // ========== 绐楀彛澶у皬鏀瑰彉鍥炶皟 ==========

    // 璁剧疆绐楀彛澶у皬鏀瑰彉鍥炶皟
    __declspec(dllexport) void __stdcall SetWindowResizeCallback(
        WindowResizeCallback callback
    );


    // 璁剧疆鑷粯绐楀彛鍏抽棴鍥炶皟
    // 褰撹嚜缁樼獥鍙ｈ鍏抽棴锛堢敤鎴风偣 X 鎴栦唬鐮佽皟鐢?destroy_window锛夋椂瑙﹀彂
    __declspec(dllexport) void __stdcall SetWindowCloseCallback(
        WindowCloseCallback callback
    );


    // ========== 缂栬緫妗嗗姛鑳?==========

    // 鍒涘缓缂栬緫妗嗭紙vertical_center 浠呭崟琛屾湁鏁堬級
    __declspec(dllexport) HWND __stdcall CreateEditBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=宸? 1=涓? 2=鍙?
        BOOL multiline,
        BOOL readonly,
        BOOL password,
        BOOL has_border,
        BOOL vertical_center  // 鏂囨湰鍨傜洿灞呬腑锛堜粎鍗曡鏈夋晥锛?
    );


    // 璁剧疆缂栬緫妗嗛鑹?
    __declspec(dllexport) void __stdcall SetEditBoxColor(
        HWND hEdit,
        UINT32 fg_color,
        UINT32 bg_color
    );


    // 璁剧疆缂栬緫妗嗕綅缃拰澶у皬
    __declspec(dllexport) void __stdcall SetEditBoxBounds(
        HWND hEdit,
        int x, int y, int width, int height
    );


    // 鏄剧ず/闅愯棌缂栬緫妗?
    __declspec(dllexport) void __stdcall ShowEditBox(
        HWND hEdit,
        BOOL show
    );


    // ========== 鏍囩鍔熻兘 ==========  

    // 鍒涘缓鏍囩
    __declspec(dllexport) HWND __stdcall CreateLabel(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=宸? 1=涓? 2=鍙?
        BOOL word_wrap  // 鏄惁鎹㈣鏄剧ず
    );


    // 璁剧疆鏍囩鏂囨湰
    __declspec(dllexport) void __stdcall SetLabelText(
        HWND hLabel,
        const unsigned char* text_bytes,
        int text_len
    );


    // 璁剧疆鏍囩浣嶇疆鍜屽ぇ灏?
    __declspec(dllexport) void __stdcall SetLabelBounds(
        HWND hLabel,
        int x, int y, int width, int height
    );


    // 鏄剧ず/闅愯棌鏍囩
    __declspec(dllexport) void __stdcall ShowLabel(
        HWND hLabel,
        BOOL show
    );